[gd_scene load_steps=20 format=2]

[ext_resource path="res://textures/bird/seagull_fly2.png" type="Texture" id=1]
[ext_resource path="res://game/seagull/Seagull.gd" type="Script" id=2]
[ext_resource path="res://textures/bird/seagull_fly1.png" type="Texture" id=3]
[ext_resource path="res://textures/bird/seagull_flee1.png" type="Texture" id=4]
[ext_resource path="res://textures/bird/seagull_flee2.png" type="Texture" id=5]
[ext_resource path="res://audio/chirp.wav" type="AudioStream" id=6]
[ext_resource path="res://game/seagull/chirpsfx.gd" type="Script" id=7]
[ext_resource path="res://game/seagull/seagull_sprite.gd" type="Script" id=8]
[ext_resource path="res://game/seagull/SeagullDespawn.gd" type="Script" id=9]
[ext_resource path="res://game/seagull/ComebackTimer.gd" type="Script" id=10]
[ext_resource path="res://game/seagull/AttackTimer.gd" type="Script" id=11]
[ext_resource path="res://game/seagull/PlayerArea.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "flee",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "flying",
"speed": 10.0
} ]

[node name="Seagull" type="KinematicBody2D" groups=["seagull"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )
disabled = true

[node name="EnvironmentArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnvironmentArea"]
shape = SubResource( 2 )

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource( 3 )

[node name="WaterArea" type="Area2D" parent="PlayerArea"]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea/WaterArea"]
shape = SubResource( 5 )

[node name="HitboxArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource( 6 )

[node name="WaterArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterArea"]
shape = SubResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
animation = "flee"
playing = true
script = ExtResource( 8 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
script = ExtResource( 9 )

[node name="Chirp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 15.0
bus = "SFX"
script = ExtResource( 7 )

[node name="ComebackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
script = ExtResource( 10 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true
script = ExtResource( 11 )

[connection signal="attack" from="." to="PlayerArea" method="_on_Seagull_attack"]
[connection signal="attack" from="." to="AttackTimer" method="_on_Seagull_attack"]
[connection signal="evading" from="." to="ComebackTimer" method="_on_Seagull_evading"]
[connection signal="flying_away" from="." to="AnimatedSprite" method="_on_Seagull_flying_away"]
[connection signal="flying_away" from="." to="DespawnTimer" method="_on_Seagull_flying_away"]
[connection signal="flying_away" from="." to="Chirp" method="_on_Seagull_flying_away"]
[connection signal="hit_water" from="." to="AnimatedSprite" method="_on_Seagull_hit_water"]
[connection signal="body_entered" from="EnvironmentArea" to="." method="_on_environment_entered"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_enter_player"]
[connection signal="area_entered" from="PlayerArea/WaterArea" to="." method="_on_water_entered"]
[connection signal="area_entered" from="WaterArea" to="." method="_on_WaterArea_area_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="ComebackTimer" to="." method="_on_ComebackTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
